# ssm

./: CMakeLists.txt  ProtectedResource.cpp  ProtectedResource.hpp  auto_singleton.hpp  client_events.hpp  client_state_a.hpp  client_state_b.hpp  client_state_c.hpp  context.hpp  event.hpp  event_processor.hpp  i_slot.cpp  i_slot.hpp  i_slot_ref_list.cpp  i_slot_ref_list.hpp  id_generator.cpp  id_generator.hpp  main.cpp  protected_resource.cpp  protected_resource.hpp  readme.md  singleton.hpp  slot.cpp  slot.hpp  state.hpp  state_holder.cpp  state_holder.hpp  test1.cpp  tests.cpp  tests.hpp  tests.test1.cpp
example/: example.cpp
include/: context.hpp  event_processor.hpp  event_result.hpp  has_handle.hpp  state.hpp
include/mm/: auto_singleton.hpp  observer.hpp  state.hpp
include/ssm/: error.hpp  event.hpp  progid.hpp  state.hpp  state_machine.hpp
licensing/: license.txt
src/: progid.cpp  state.cpp  state_machine.cpp
src/tests/: tests.cpp  tests.hpp
user_cases/: state_a.cpp  state_a.hpp  state_a1.cpp  state_a1.hpp  state_a2.cpp  state_a2.hpp  state_b.hpp  state_p.cpp  state_p.hpp
